fabric/testdata/out/ing_setanta-spp-orchestrator-staging-post-products-wildcard-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/products/**\") \u0026\u0026 Method(\"POST\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"pcamposdesiq\", \"https://identity.zalando.com/managed-id\", \"aalexandre\",
      \"https://identity.zalando.com/managed-id\", \"jocarroll\", \"https://identity.zalando.com/managed-id\",
      \"matgonzalez\", \"https://identity.zalando.com/managed-id\", \"gwaldmann\",
      \"https://identity.zalando.com/managed-id\", \"rtawari\", \"https://identity.zalando.com/managed-id\",
      \"ophelan\", \"https://identity.zalando.com/managed-id\", \"psuchon\", \"https://identity.zalando.com/managed-id\",
      \"jwawszczak\", \"https://identity.zalando.com/managed-id\", \"ashaikh\", \"https://identity.zalando.com/managed-id\",
      \"dlopes\", \"https://identity.zalando.com/managed-id\", \"vkocherga\", \"https://identity.zalando.com/managed-id\",
      \"lcrowe\", \"https://identity.zalando.com/managed-id\", \"dmiaroslavsk\", \"https://identity.zalando.com/managed-id\",
      \"sborzenko\", \"https://identity.zalando.com/managed-id\", \"aalvarez\", \"https://identity.zalando.com/managed-id\",
      \"snesterenko\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"5d644909-2f88-11e9-b826-0a3d2718077c","deployment-id":"d-rzj77h4x8wn7gqnwjt6zh18sh","pipeline-id":"l-25dxnxjs786jap63ehk6141r6o"},"name":"setanta-spp-orchestrator-staging-post-products-wildcard-admins","namespace":"default"},"spec":{"rules":[{"host":"setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-spp-orchestrator-st [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/products/**") && Method("POST")
      && JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "pcamposdesiq", "https://identity.zalando.com/managed-id", "aalexandre", "https://identity.zalando.com/managed-id",
      "jocarroll", "https://identity.zalando.com/managed-id", "matgonzalez", "https://identity.zalando.com/managed-id",
      "gwaldmann", "https://identity.zalando.com/managed-id", "rtawari", "https://identity.zalando.com/managed-id",
      "ophelan", "https://identity.zalando.com/managed-id", "psuchon", "https://identity.zalando.com/managed-id",
      "jwawszczak", "https://identity.zalando.com/managed-id", "ashaikh", "https://identity.zalando.com/managed-id",
      "dlopes", "https://identity.zalando.com/managed-id", "vkocherga", "https://identity.zalando.com/managed-id",
      "lcrowe", "https://identity.zalando.com/managed-id", "dmiaroslavsk", "https://identity.zalando.com/managed-id",
      "sborzenko", "https://identity.zalando.com/managed-id", "aalvarez", "https://identity.zalando.com/managed-id",
      "snesterenko") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-07-08T17:35:28Z"
  generation: 1
  labels:
    controller-uid: 5d644909-2f88-11e9-b826-0a3d2718077c
    deployment-id: d-rzj77h4x8wn7gqnwjt6zh18sh
    pipeline-id: l-25dxnxjs786jap63ehk6141r6o
  name: setanta-spp-orchestrator-staging-post-products-wildcard-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-spp-orchestrator-staging
    uid: 5d644909-2f88-11e9-b826-0a3d2718077c
  resourceVersion: "1357488745"
  uid: c710b908-a1a6-11e9-98bf-02a7952e236c
spec:
  rules:
  - host: setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-orchestrator-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
